# c_cpp_project_structure_sample

./: .dirInfo  .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: .dirInfo
src/lib/: .dirInfo
test/: .dirInfo
